# jco

./: #.html  .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .prettierignore  404.html  CHANGELOG.md  CODEOWNERS  Cargo.toml  EXAMPLE.md  ORG_CODE_OF_CONDUCT.md  README.md  __tmp.js  adapter.wasm  api.d.ts  build-dist.sh  build.rs  cliff.toml  commitlint.config.mjs  contributing-docs.html  contributing.html  create-idl-component.sh  eslint.config.mjs  eslintrc.cjs  eslintrc.mjs  example-workflow.html  example.html  index.html  introduction.html  jco.code-workspace  justfile  manual-wasm-instantiation-with-wasi-overrides.html  optimized-host-bindings.html  package-lock.json  package.dist.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  (+23 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: create-release-pr.yml  deploy_mdbook.yml  docs.yml  examples.yml  lint-gha.yml  lint-pr.yml  lint.yml  main-windows.yml  main.yml  receive-pr.yml  release.yml  tag-release.yml
crates/jco/: Cargo.toml
crates/js-component-bindgen/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/js-component-bindgen-component/: Cargo.toml  README.md  js-component-bindgen.wit
crates/js-component-bindgen-component/src/: bindings.rs  lib.rs
crates/js-component-bindgen-component/wit/: js-component-bindgen.wit
crates/js-component-bindgen/src/: bindgen.rs  component.rs  componentize_bindgen.rs  core.rs  esm_bindgen.rs  files.rs  function_bindgen.rs  identifier.rs  intrinsics.rs  lib.rs  names.rs  source.rs  transpile_bindgen.rs  ts_bindgen.rs  ts_stubgen.rs
crates/js-component-bindgen/src/intrinsics/: component.rs  conversion.rs  js_helper.rs  lift.rs  lower.rs  mod.rs  resource.rs  string.rs  webidl.rs
crates/js-component-bindgen/src/intrinsics/p3/: async_future.rs  async_stream.rs  async_task.rs  error_context.rs  host.rs  mod.rs  waitable.rs
crates/js-component-bindgen/tests/: ts_stubgen.rs
crates/js-component-bindgen/tests/wit/: caller.wit
crates/js-transpiler-bindgen/: Cargo.toml  js-transpiler-bindgen.wit
crates/test-components/: Cargo.toml
crates/test-components/.cargo/: config.toml
crates/test-components/artifacts/: Cargo.toml  build.rs
crates/test-components/wit/: all.wit
crates/test-utils/: Cargo.toml
crates/wasm-tools-component/: Cargo.toml  README.md  wasm-tools.wit
crates/wasm-tools-component/src/: lib.rs
crates/wasm-tools-component/wit/: console.wit  wasm-tools.wit
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  test.rs
crates/xtask/src/generate/: preview2_tests.rs  wasi_types.rs  webidl_tests.rs
docs/: book.toml
docs/src/: SUMMARY.md  contributing-docs.md  contributing.md  example.md  introduction.md  manual-wasm-instantiation-with-wasi-overrides.md  optimized-host-bindings.md  transpiling.md  wit-type-representations.md
examples/: README.md
examples/components/: README.md
examples/guides/: 00-tooling-setup.md  01-building-a-component-with-jco.md  02-running-components-in-js.md  03-exporting-functionality-with-rich-types.md  04-importing-and-reusing-components.md  README.md
examples/transpile/: README.md
html/: #.html  404.html  contributing-docs.html  contributing.html  toc.html  wit-type-representations.html
lib/: dummy_reactor.component.wasm  wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
scripts/: install-puppeteer.mjs  lint-cc.mjs  post-release-issue-update.mjs  semver-get-prerelease.mjs  semver-is-prerelease.mjs  semver-lt.mjs  update-tests.sh  update-wasi-p2.sh  update-wasi-p3.sh
src/: api.js  browser.js  common.js  dependencies.js  jco.js  jsct.js
src/cmd/: componentize.js  opt.js  run.js  stubgen.js  transpile.js  wasm-tools.js
test/: api.js  async.browser.js  async.js  browser.html  browser.js  cli.js  codegen.js  commands.js  common.js  eslintrc.cjs  eslintrc.mjs  helpers.js  preview2-wasi-sockets-tcp.js  preview2-wasi-sockets-udp.js  preview2-wasi-sockets.js  preview2.js  runtime.js  test.js  tsconfig.json  typescript.js  vitest.lts.ts  vitest.ts  wit.js
test/components/: .gitignore  README.md  justfile
test/components/rust/: Cargo.toml  justfile
test/components/rust/artifacts/: Cargo.toml  build.rs
test/components/rust/wit/: all.wit
test/fixtures/: .gitignore  char.component.wasm  conventions.component.wasm  dummy_proxy.component.wasm  dummy_reactor.component.wasm  empty.component.wasm  env-allow.composed.wasm  exports_only.component.wasm  flags.component.wasm  flavorful.component.wasm  floats.component.wasm  import-func.component.wasm  integers.component.wasm  invalid.component.wasm  just-export.component.wasm  keywords.component.wasm  lists.component.wasm  many-arguments.component.wasm  many_arguments.component.wasm  multi-return.component.wasm  numbers.component.wasm  records.component.wasm  rename-interface.component.wasm  results.component.wasm  simple-functions.component.wasm  simple-lists.component.wasm  small-anonymous.component.wasm  smoke-default.component.wasm  smoke-export.component.wasm  smoke.component.wasm  source.js  stdio.composed.wasm  strings.component.wasm  strings_utf16.component.wasm  unions.component.wasm  use-across-interfaces.component.wasm  variants.component.wasm  wasi_snapshot_preview1.reactor.wasm  wasi_snapshot_preview1.wasm  xqd.wit
test/runtime/: dummy_proxy.ts  example_guest_export.ts  example_guest_import.ts  exports_only.ts  flavorful.ts  helpers.ts  invalid.ts  list-adapter-fusion.ts  lists.ts  many-arguments.ts  many_arguments.ts  multi-version.ts  numbers.ts  records.ts  resource_borrow_simple.ts  smoke.ts  strings.async+js.ts  strings.sync+js.ts  strings.sync.ts  strings.ts  strings_utf16.ts  variants.ts  wasi-http-proxy.ts
tests/: importmap.json  mod.rs  prototype.rs
tests/server/: http-server.js  index.js
troubleshooting/: common-issues.html
xtask/: Cargo.toml
xtask/src/: build.rs  build_self.rs  main.rs  self_build.rs  test.rs
xtask/src/generate/: idl.rs  mod.rs  preview2_tests.rs  tests.rs  wasi_types.rs  webidl_tests.rs
xtask/src/update/: mod.rs  preview2.rs
(+275 files in other folders)
