[workspace]
resolver = "2"
exclude = ["submodules"]
default-members = [
  "crates/js-component-bindgen",
  "crates/js-component-bindgen-component",
  "crates/wasm-tools-component",
  "crates/xtask",
  "crates/jco",
]
members = [
  "crates/js-component-bindgen",
  "crates/js-component-bindgen-component",
  "crates/wasm-tools-component",
  "crates/xtask",
  "crates/jco",
  "crates/test-components",
  "crates/test-components/artifacts",
]

[workspace.package]
edition = "2024"
version = "1.10.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = false
panic = 'abort'
rpath = false
strip = true

[workspace.dependencies]
anyhow = { version = "1.0.95", default-features = false }
base64 = { version = "0.22.1", default-features = false }
cargo_metadata = { version = "0.19.2", default-features = false }
heck = { version = "0.5.0", default-features = false }
log = { version = "0.4.22", default-features = false }
semver = { version = "1.0.25", default-features = false }
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.49.0", default-features = false }
webidl2wit = { version = "0.1.0", default-features = false }
xshell = { version = "0.2.6", default-features = false }

wasmtime = { version = "42.0.0", default-features = false }
wasm-encoder = { version = "0.245.1", default-features = false }
wasm-metadata = { version = "0.245.1", default-features = false }
wasmparser = { version = "0.245.1", default-features = false }
wasmprinter = { version = "0.245.1", default-features = false }
wasmtime-environ = { path = "submodules/wasmtime/crates/environ", features= [ "component-model", "compile" ] }
wat = { version = "1.245.1", default-features = false }
wit-bindgen = { version = "0.53.1", default-features = false }
wit-bindgen-core = { version = "0.53.1", default-features = false }
wit-component = { version = "0.245.1", features = ["dummy-module"] }
wit-parser = { version = "0.245.1", default-features = false }

js-component-bindgen = { version = "1.15.0", path = "./crates/js-component-bindgen" }

[patch.crates-io]
wasmparser = { path = "submodules/wasm-tools/crates/wasmparser" }
wasm-encoder = { path = "submodules/wasm-tools/crates/wasm-encoder" }
wasm-metadata = { path = "submodules/wasm-tools/crates/wasm-metadata" }
wasmprinter = { path = "submodules/wasm-tools/crates/wasmprinter" }
wat = { path = "submodules/wasm-tools/crates/wat" }
wast = { path = "submodules/wasm-tools/crates/wast" }
wit-component = { path = "submodules/wasm-tools/crates/wit-component" }
wit-parser = { path = "submodules/wasm-tools/crates/wit-parser" }
