[workspace]
resolver = "2"
default-members = [
  "crates/js-component-bindgen",
  "crates/js-component-bindgen-component",
  "crates/wasm-tools-component",
  "crates/xtask",
  "crates/jco",
]
members = [
  "crates/js-component-bindgen",
  "crates/js-component-bindgen-component",
  "crates/wasm-tools-component",
  "crates/xtask",
  "crates/jco",
  "crates/test-components",
  "crates/test-components/artifacts",
  # extended test components
  "test/components/rust",
  "test/components/rust/artifacts",
]

[workspace.package]
edition = "2024"
version = "1.10.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = false
panic = 'abort'
rpath = false
strip = true

[workspace.dependencies]
anyhow = { version = "1.0.102", default-features = false }
bon = { version = "3.9.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
heck = { version = "0.5.0", default-features = false }
log = { version = "0.4.29", default-features = false }
semver = { version = "1.0.27", default-features = false }
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.50.0", default-features = false }
webidl2wit = { version = "0.1.1", default-features = false }
xshell = { version = "0.2.7", default-features = false }

wasmtime = { version = "45.0.1", default-features = false }
wasmtime-environ = { version = "45.0.1", features= [ "component-model", "compile" ] }

wasm-encoder = { version = "0.251.0", default-features = false }
wasm-metadata = { version = "0.251.0", default-features = false }
wasmparser = { version = "0.251.0", default-features = false }
wasmprinter = { version = "0.251.0", default-features = false }
wit-component = { version = "0.251.0", features = ["dummy-module"] }
wit-parser = { version = "0.251.0", default-features = false }

wat = { version = "1.251.0", default-features = false }

wit-bindgen = { version = "0.58.0", default-features = false }
wit-bindgen-core = { version = "0.58.0", default-features = false }

wast = { version = "251.0.0", default-features = false, features = [ "component-model" ] }

js-component-bindgen = { version = "2.0.3", path = "./crates/js-component-bindgen" }
