[package]
name = "xtask"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { workspace = true }
js-component-bindgen = { workspace = true, features = ["idl-imports"] }
semver = "1.0.23"
structopt = { workspace = true }
webidl2wit = { git = "https://github.com/guybedford/webidl2wit", branch = "top-level-convention" }
weedle = "0.13.0"
wit-component = { workspace = true }
wit-encoder = { git = "https://github.com/bytecodealliance/wasm-tools.git" }
xshell = { workspace = true }
