[package]
name = "js-component-bindgen-component"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Guy Bedford <gbedford@fastly.com>"]
publish = false

version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
clap = { workspace = true, optional = true }
js-component-bindgen = { path = "../js-component-bindgen" }
wasmtime-environ = { workspace = true, features = ['component-model'] }
wit-bindgen-guest-rust = { workspace = true, features = ['default'] }
wit-component = { workspace = true }
wit-parser = { workspace = true }
indexmap = { workspace = true }
base64 = { workspace = true }
