[package]
name = "js-component-bindgen-component"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Guy Bedford <gbedford@fastly.com>"]
publish = false

version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
js-component-bindgen = { path = "../js-component-bindgen" }
wasmtime-environ = { workspace = true }
wit-bindgen = { workspace = true }
