[package]
name = "js-component-bindgen-component"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Guy Bedford <gbedford@fastly.com>"]
publish = false

version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
wasmtime-environ = { workspace = true, features = [ "component-model" ] }
wit-bindgen = { workspace = true }
wat = { workspace = true, features = [ "component-model" ]}

js-component-bindgen = { path = "../js-component-bindgen" }
