[package]
name = "js-component-bindgen"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Guy Bedford <gbedford@fastly.com>"]
publish = false

version.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = ["transpile-bindgen"]
transpile-bindgen = []

[dependencies]
anyhow = { workspace = true }
heck = { workspace = true }
wasmtime-environ = { workspace = true, features = ['component-model'] }
wit-component = { workspace = true }
wit-parser = { workspace = true }
indexmap = { workspace = true }
base64 = { workspace = true }
