[package]
name = "js-component-bindgen"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Guy Bedford <gbedford@fastly.com>",
]
description = "JS component bindgen for transpiling WebAssembly components into JavaScript"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
homepage = "https://github.com/bytecodealliance/jco/tree/main/crates/js-component-bindgen"
repository = "https://github.com/bytecodealliance/jco"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib"]

[features]
default = ["transpile-bindgen"]
transpile-bindgen = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
heck = { workspace = true }
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wasmtime-environ = { workspace = true, features = ['component-model'] }
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
