[package]
name = "js-component-bindgen"
version = "1.10.0"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
homepage = "https://github.com/bytecodealliance/jco/tree/main/crates/js-component-bindgen"
repository = "https://github.com/bytecodealliance/jco"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Guy Bedford <gbedford@fastly.com>",
]
description = "JS component bindgen for transpiling WebAssembly components into JavaScript"

edition = { workspace = true }

[lib]
crate-type = ["lib"]

[features]
default = ["transpile-bindgen"]
transpile-bindgen = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true, features = [ "alloc" ] }
heck = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
wasm-encoder = { workspace = true }
wasmparser = { workspace = true, features = [ "features", "component-model" ] }
wasmtime-environ = { workspace = true, features = ['component-model'] }
wit-bindgen-core = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
