[package]
name = "wasm-tools-js"
publish = false
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
wasmparser = { workspace = true }
wasmprinter = { workspace = true }
wasm-encoder = { workspace = true }
wat = { workspace = true }
wit-bindgen-guest-rust = { workspace = true, features = ['default'] }
wit-component = { workspace = true }
wit-parser = { workspace = true }
