[package]
name = "xtask"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
anyhow = { workspace = true }
js-component-bindgen = { workspace = true }
semver = "1.0.23"
structopt = { workspace = true }
webidl2wit = { workspace = true }
weedle = "0.13.0"
wit-component = { workspace = true }
wit-encoder = "0.214.0"
xshell = { workspace = true }
