[package]
name = "extended-jco-test-components"
version = "0.0.0"
edition = "2024"
publish = false
description = """
Test components for use during extended jco testing
"""

[workspace]
resolver = "2"
members = [
    "artifacts"
]

[dependencies]
futures = { workspace = true, features = ["alloc"] }
wit-bindgen = { workspace = true, features = [ "macros", "async-spawn"] }

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
futures = { version = "0.3.32", default-features = false }
heck = { version = "0.5.0", default-features = false }
tokio = { version = "1.50.0", default-features = false }
wasmtime = { version = "45.0.1", default-features = false }
wit-bindgen = { version = "0.58.0", default-features = false }
wit-component = { version = "0.251.0", default-features = false }

