# This crate is heavily inspired by wasmtime's test-programs/artifacts
# (see: https://github.com/bytecodealliance/wasmtime/blob/main/crates/test-programs/artifacts/Cargo.toml)
#
# This crate's only purpose is to *build* the wasm components availabe in the test-programs crate
[package]
name = "extended-jco-test-components-artifacts"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
wasmtime = { workspace = true, default-features = false, features = [
  'incremental-cache',
  'cranelift',
  'component-model',
] }

[build-dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
heck = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process"] }
wit-component = { workspace = true, features = ["dummy-module"] }
